PROYECTO1 / Frelancer terminado

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
 
     <header class="header">
-        <h1>Diego David Gavilanez <sub><span>Freelancer</span></sub> </h1>
+        <h1>Diego David Gavilanez <span>Freelancer</span> </h1>
     </header>
 
-    <div class=" nav-bg">
+    <div class="nav-bg">
         <nav class="navegacion contenedor">
             <a href="#">Inicio</a>
             <a href="#">Nosotros</a>
@@ -36,7 +36,7 @@
                     <path stroke="none" d="M0 0h24v24H0z" />
                     <circle cx="12" cy="11" r="3" />
                     <path d="M17.657 16.657L13.414 20.9a1.998 1.998 0 0 1 -2.827 0l-4.244-4.243a8 8 0 1 1 11.314 0z" />
-                </svg>Guadalajara, Jalisco</p>
+                </svg>Cotopaxi - Ecuador</p>
 
             <a class="boton" href="#contacto">Contactar</a>
         </div>
@@ -145,7 +145,7 @@
     </div>
 
     <footer class="footer">
-        <p>Todos los derechos reservados. Juan De la torre Freelancer</p>
+        <p>Todos los derechos reservados. Diego David Gavilanez <span>Freelancer</span> </p>
     </footer>
 
 
